--- a/buscacep/pom.xml
+++ b/buscacep/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>br.org.fonseca</groupId>
+	<groupId>br.org.wfonseca</groupId>
 	<artifactId>buscacep</artifactId>
 
 	<version>1.0.1</version>
@@ -24,18 +24,6 @@
 			<timezone>-3</timezone>
 		</developer>
 	</developers>
-
-	<!-- Maven repositories -->
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<id>central</id>
-			<name>Maven Repository</name>
-			<url>http://repo1.maven.org/maven2</url>
-		</repository>		
-	</repositories>
 
 	<dependencies>
 
@@ -101,6 +89,15 @@
 			</plugin>
 
 		</plugins>
+
+
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>2.4</version>
+			</extension>
+		</extensions>
 	</build>
-	<description>API para Busca de CEp</description>
+	<description>API para Busca de CEP</description>
 </project>
