--- a/buscacep/pom.xml
+++ b/buscacep/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>br.org.wfonseca</groupId>
+	<groupId>com.github.wagnerfonseca</groupId>
 	<artifactId>buscacep</artifactId>
 
 	<version>1.0.1</version>
@@ -12,11 +12,27 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
+	
+	<url>http://www.sonatype.com</url>
+
+    <licenses>
+        <license>
+            <name>Apache 2</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>Sonatype</name>
+        <url>http://www.sonatype.com</url>
+    </organization>
 
 	<developers>
 		<developer>
 			<name>Wagner Fonseca</name>
-			<id>wfonseca</id>
+			<id>wagnerfonseca</id>
 			<email>wagner.fonseca@gmail.com</email>
 			<roles>
 				<role>Programmer</role>
