--- a/appbuscacep/pom.xml
+++ b/appbuscacep/pom.xml
@@ -12,13 +12,19 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
+	
+	<!-- <repositories>
+		<repository>
+			<id>repository-nexus</id>
+			<url>https://oss.sonatype.org/content/groups/public/</url>
+		</repository>
+	</repositories> -->
 
 	<dependencies>
 		<dependency>
-			<groupId>br.fonseca</groupId>
-			<artifactId>buscacep</artifactId>		
-			<version>1.0.1</version>
-			<scope>compile</scope>
+		  <groupId>com.github.wagnerfonseca</groupId>
+		  <artifactId>buscacep</artifactId>
+		  <version>1.0.1</version>
 		</dependency>
 	</dependencies>
 
